--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
+body{
+    background-color: hsl(233, 47%, 7%);
+    font-family: 'Inter', sans-serif;
+}
+
+.container {
+    /* margin: 100px 100px; */
+    background-color: hsl(244, 38%, 16%);
+    color: white;
+    display: flex;
+}
+
+.wrapper-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 25px 100px;
+}
+
+.hero-title {
+    font-size: 48px;
+    font-family: 700;
+    margin-bottom: 30px;
+}
+
+.body-copy {
+    
+}
+
+span {
+    color: hsl(277, 64%, 61%);
+}
+
+.metrics{
+    font-family: 'Lexend Deca', sans-serif;
+}
 .attribution {
     font-size: 11px;
     text-align: center;
