--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,11 @@ body{
     color: hsl(277, 64%, 61%);
 }
 
+
 img {
     /* width: 640px; */
     height: 100%;
-    background-color: hsl(277, 64%, 61%);
-    background-blend-mode: multiply;
+    background: linear-gradient(hsl(277, 64%, 61%), hsl(277, 64%, 61%)), url(./images/image-header-desktop.jpg);
     border-radius: 0 5px 5px 0;
     
 }
