--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,15 @@ body{
 img {
     /* width: 640px; */
     height: 100%;
-    background: linear-gradient(hsl(277, 64%, 61%), hsl(277, 64%, 61%)), url(./images/image-header-desktop.jpg);
+    mix-blend-mode: multiply;
+    opacity: 0.75;
     border-radius: 0 5px 5px 0;
-    
 }
+
+.wrapper-right {
+    background-color: hsl(277, 64%, 61%);
+}
+
 .metrics{
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 900;
